Topic Controller Add Action

--- a/Squirrel/Squirrel.Web/Areas/Author/Views/Categories/Tree.cshtml
+++ b/Squirrel/Squirrel.Web/Areas/Author/Views/Categories/Tree.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Squirrel.Domain.ViewModels
-@model List<Squirrel.Domain.ViewModels.CategoryTreeModel>
+@model List<CategoryTreeModel>
 
 @foreach (var cat in Model)
 {
