Edit Post Files

--- a/Squirrel/Squirrel.Web/Areas/Author/Views/Files/Details.cshtml
+++ b/Squirrel/Squirrel.Web/Areas/Author/Views/Files/Details.cshtml
@@ -7,6 +7,12 @@
     <b>@Html.DisplayFor(m => m.Name)</b>
 </p>
 
+
+<p>
+    @Html.DisplayNameFor(m => m.Id) :
+    <b>@Html.DisplayFor(m => m.Id)</b>
+</p>
+
 <p>
     @Html.DisplayNameFor(m => m.Address) :
     @if (Request.Url != null)
