--- a/Squirrel/Squirrel.Web/Areas/Author/Views/Posts/Item.cshtml
+++ b/Squirrel/Squirrel.Web/Areas/Author/Views/Posts/Item.cshtml
@@ -24,6 +24,7 @@
         @Html.HiddenFor(m => m.IsPublic)
         @Html.HiddenFor(m => m.FlatedTags)
         @Html.HiddenFor(m => m.HeaderImageId)
+        @Html.HiddenFor(m => m.FlatedAttachments)
 
         <div>
             خلاصه :
@@ -55,7 +56,7 @@
     </div>
     <hr />
     <div>
-        فایل های ضمیمه :
+        @Html.Partial("Item_Attachments")
     </div>
 </div>
 
