--- a/Squirrel/Squirrel.Web/Areas/Author/Views/Comments/Add.cshtml
+++ b/Squirrel/Squirrel.Web/Areas/Author/Views/Comments/Add.cshtml
@@ -17,7 +17,7 @@
 
     <p>
         <button type="button" class="btn btn-default" onclick="cancelAddComment()">انصراف</button>
-        <button type="button" class="btn btn-default" onclick="onAddCommentBegin()">ثبت</button>
+        <button type="submit" class="btn btn-default">ثبت</button>
     </p>
 }
 
