--- a/Squirrel/Squirrel.Web/Views/Issues/Archive_Filter.cshtml
+++ b/Squirrel/Squirrel.Web/Views/Issues/Archive_Filter.cshtml
@@ -4,7 +4,13 @@
 {
     @Html.AntiForgeryToken()
     @Html.Hidden("searchPage", 1)
-    @Html.TextBoxFor(m => m.Title, new { placeholder = "عنوان" })
-    @Html.TextBoxFor(m => m.Category, new { placeholder = "گروه" })
+    @Html.HiddenFor(m => m.Author)
+    @Html.HiddenFor(m => m.AuthorId)
+    @Html.HiddenFor(m => m.Category)
+    @Html.HiddenFor(m => m.CategoryId)
+    @Html.HiddenFor(m => m.PublishDateFrom)
+    @Html.HiddenFor(m => m.PublishDateTo)
+    
+    @Html.TextBoxFor(m => m.SeachText, new { placeholder = "عبارت" })
     <button type="submit">جستجو</button>
 }
