--- a/Squirrel/Squirrel.Web/Views/Issue/Item.cshtml
+++ b/Squirrel/Squirrel.Web/Views/Issue/Item.cshtml
@@ -1,4 +1,7 @@
 ﻿@model Squirrel.Domain.Enititis.Topic
+@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
 
 <div>
     @Html.DisplayFor(m => m.Title)
@@ -7,3 +10,13 @@
 <div>
     @Html.DisplayFor(m => m.PublishDate)
 </div>
+
+<hr />
+
+@foreach (var post in Model.Posts)
+{
+    var item = post;
+    <p>
+        @Html.DisplayFor(m => item.CreateDate)
+    </p>
+}
